syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.davincischools.leo.protos.user_management";

package user_management;

enum Operation {
  CHECK = 0;
  INSERT = 1;
  UPDATE = 2;
}

enum Role {
  STUDENT = 0;
  TEACHER = 1;
  ADMIN = 2;
}

service UserManagementService {
  rpc UpsertUser (UpsertUserRequest) returns (UpsertUserResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

message UpsertUserRequest {
  optional Operation operation = 1;
  optional Role role = 2;
  optional int64 id = 3;
  optional string first_name = 4;
  optional string last_name = 5;
  optional string email_address = 6;
  optional string password = 7;
  optional string verifyPassword = 8;
}

message UpsertUserResponse {
  optional bool success = 1;
  optional string first_name_error = 3;
  optional string last_name_error = 4;
  optional string email_address_error = 5;
  optional string password_error = 6;
  optional string verify_password_error = 7;
}

message LoginRequest {
  optional string email_address = 1;
  optional string password = 2;
}

message LoginResponse {
  optional bool success = 1;
  optional bool login_failure = 2;
  optional string email_address_error = 3;
  optional string password_error = 4;
}